<resources>
    <string name="app_name">Futax</string>
    <string name="calculate">calculate</string>
    <string name="hint">value</string>
    <string name="earning">Earning</string>
    <string name="app_title">FUTAX</string>
    <string name="quantity">Quantity</string>
    <string name="home">Home</string>
    <string name="simple">Simple</string>
    <string name="complex">Complex</string>
    <string name="buy_for">Buy For</string>
    <string name="sell_for">Sell For</string>

    <string name="profit">Profit</string>
    <string name="logs">Logs</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="empty_logs">There is no recent calculations</string>
    <string name="reset">Reset</string>
    <string name="required">Required</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="collapse">collapse</string>
    <string name="simple_logs">Simple Logs</string>
    <string name="complex_logs">Complex Logs</string>
    <string name="details">Details</string>
    <string name="total">Total</string>
    <string name="taxes">Taxes</string>
</resources>