<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.futax.futax_application.ui.complex.ComplexViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="match_parent"
        tools:context=".futax_application.ui.complex.ComplexLogsFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLogsEmpty == true ? View.VISIBLE: View.GONE}"
            android:text="@string/empty_logs"
            app:layout_constraintBottom_toBottomOf="@+id/rv_complex_logs"
            app:layout_constraintEnd_toEndOf="@+id/rv_complex_logs"
            app:layout_constraintStart_toStartOf="@+id/rv_complex_logs"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_grid_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/grid_view"
            android:src="@drawable/ic_baseline_grid_view_24"
            app:layout_constraintEnd_toStartOf="@+id/btn_linear_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_linear_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/list_view"
            android:src="@drawable/ic_baseline_view_headline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_complex_logs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_linear_view"
            tools:listitem="@layout/item_complex_log_list" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>